projet/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namouchi-bazzi-andriamasinoro
  labels:
    project: calculatrice-cloud-native
    environment: production
